--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timber House</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Roboto:wght@300;400;700&display=swap"
+        rel="stylesheet">
+    <link rel="styleSheet" href="css/magnific-popup.css">
+    <link rel="styleSheet" href="css/style.css">
 </head>
 
 <body>
-    <header class="header">
+    <header class="header" style="background-image: url(img/fon.png)">
         <div class="header__inner">
             <img src="img/home.png" alt="">
             <div class="header__name">timber House
@@ -25,131 +31,178 @@
             </div>
         </div>
     </header>
-</body>
-<main class="main">
-    <div class="main__title">
-        Строительство домов и бань из строганного и профилированного бруса
-    </div>
-    <div class="main__text">
-        За 10 лет мы возвели больше 250 домов и бань из бруса
-        ИМЕЕМ БОЛЬШОЙ ОПЫТ В СТРОИТЕЛЬСТВЕ
-        гарантируем качество и надежность всех построенных нами объектов
-        ГАРАНТИЯ НА ДОМА И БАНИ ИЗ БРУСА 3 ГОДА
-    </div>
-    <div class="main__img">
-        <img src="img/main-img.png" alt="">
-    </div>
 
-    <div class="project">
-        <div class="project__title">
-            ПРОЕКТЫ ДОМОВ ИЗ БРУСА
+    <main class="main">
+        <div class="container">
+            <div class="main__title">
+                Строительство домов и бань из
+                строганного и профилированного бруса
+            </div>
+            <div class="main__text">
+                За 10 лет мы возвели больше 250 домов и бань из бруса
+                ИМЕЕМ БОЛЬШОЙ ОПЫТ В СТРОИТЕЛЬСТВЕ
+                гарантируем качество и надежность всех построенных нами объектов
+                ГАРАНТИЯ НА ДОМА И БАНИ ИЗ БРУСА 3 ГОДА
+            </div>
+            <div class="main__img">
+                <img src="img/main.png" alt="">
+            </div>
+
+            <div class="project">
+                <div class="project__title">
+                    ПРОЕКТЫ ДОМОВ ИЗ БРУСА
+                </div>
+                <div class="project__item">
+                    <div class="project__name">
+                        ДОМ #1
+                    </div>
+                    <div class="project__size">
+                        Размер дома: 6 x 6
+                    </div>
+                    <div class="project__area">
+                        Общая площадь дома: 54 кв. м
+                    </div>
+                    <div class="project__price">
+                        Стоимость - 402 000 рублей
+                    </div>
+                </div>
+                <div class="project__images">
+                    <div class="project_images_item">
+                        <img src="img/project-1.png" alt="">
+                    </div>
+                    <div class="project_images_item">
+                        <img src="img/project-1-scheme.png" alt="">
+                    </div>
+                </div>
+                <div class="project__item">
+                    <div class="project__name">
+                        ДОМ #2
+                    </div>
+                    <div class="project__size">
+                        Размер дома: 6 x 7,5
+                    </div>
+                    <div class="project__area">
+                        Общая площадь дома: 72 кв. м
+                    </div>
+                    <div class="project__price">
+                        Стоимость - 457 000 рублей
+                    </div>
+                </div>
+                <div class="project__images">
+                    <div class="project_images_item">
+                        <img src="img/project-2.png" alt="">
+                    </div>
+                    <div class="project_images_item">
+                        <img src="img/project-2-scheme.png" alt="">
+                    </div>
+                </div>
+                <div class="project__item">
+                    <div class="project__name">
+                        ДОМ #3
+                    </div>
+                    <div class="project__size">
+                        Размер дома: 8 х 7,5
+                    </div>
+                    <div class="project__area">
+                        Общая площадь дома: 92 кв. м
+                    </div>
+                    <div class="project__price">
+                        Стоимость - 635 000 рублей
+                    </div>
+                </div>
+                <div class="project__images">
+                    <div class="project_images_item">
+                        <img src="img/project-3.png" alt="">
+                    </div>
+                    <div class="project_images_item">
+                        <img src="img/project-3-scheme.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="project__item">
-            <div class="project__name">
-                ДОМ #1
-            </div>
-            <div class="project__size">
-                Размер дома: 6 x 6
-            </div>
-            <div class="project__area">
-                Общая площадь дома: 54 кв. м
-            </div>
-            <div class="project__price">
-                Стоимость - 402 000 рублей
+        <div class="download">
+            <img src="img/download.png" alt="">
+            <div class="download__text">
+                <a class="download__text-link" href="#">СКАЧАТЬ ВЕСЬ КАТАЛОГ ДОМОВ</a>
             </div>
         </div>
-        <div class="project__images">
-            <div class="project_images_item">
-                <img src="img/project-1.png" alt="">
-            </div>
-            <div class="project_images_item">
-                <img src="img/project-1-scheme.png" alt="">
+        <div class="container">
+            <div class="gallery">
+                <div class="gallery__title">
+                    ФОТОГРАФИИ НАШИХ РАБОТ
+                </div>
+                <div class="gallery__text">
+                    некоторые фотографии построенных нами домов и бань из бруса
+                </div>
+                <div class="gallery__inner">
+                    <a href="img/gallery-item-1.png">
+                        <img src="img/gallery-item-1.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-2.png">
+                        <img src="img/gallery-item-2.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-3.png">
+                        <img src="img/gallery-item-3.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-4.png">
+                        <img src="img/gallery-item-4.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-5.png">
+                        <img src="img/gallery-item-5.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-6.png">
+                        <img src="img/gallery-item-6.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-7.png">
+                        <img src="img/gallery-item-7.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-8.png">
+                        <img src="img/gallery-item-8.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-9.png">
+                        <img src="img/gallery-item-9.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-10.png">
+                        <img src="img/gallery-item-10.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-11.png">
+                        <img src="img/gallery-item-11.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-12.png">
+                        <img src="img/gallery-item-12.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-13.png">
+                        <img src="img/gallery-item-13.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-14.png">
+                        <img src="img/gallery-item-14.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-15.png">
+                        <img src="img/gallery-item-15.png" alt="">
+                    </a>
+                    <a href="img/gallery-item-16.png">
+                        <img src="img/gallery-item-16.png" alt="">
+                    </a>
+                </div>
+                <div class="main__img">
+                    <img src="img/main.png" alt="">
+                </div>
             </div>
         </div>
-        <div class="project__item">
-            <div class="project__name">
-                ДОМ #2
-            </div>
-            <div class="project__size">
-                Размер дома: 6 x 7,5
-            </div>
-            <div class="project__area">
-                Общая площадь дома: 72 кв. м
-            </div>
-            <div class="project__price">
-                Стоимость - 457 000 рублей
-            </div>
-        </div>
-        <div class="project__images">
-            <div class="project_images_item">
-                <img src="img/project-2.png" alt="">
-            </div>
-            <div class="project_images_item">
-                <img src="img/project-2-scheme.png" alt="">
-            </div>
-        </div>
-        <div class="project__item">
-            <div class="project__name">
-                ДОМ #3
-            </div>
-            <div class="project__size">
-                Размер дома: 8 х 7,5
-            </div>
-            <div class="project__area">
-                Общая площадь дома: 92 кв. м
-            </div>
-            <div class="project__price">
-                Стоимость - 635 000 рублей
-            </div>
-        </div>
-        <div class="project__images">
-            <div class="project_images_item">
-                <img src="img/project-3.png" alt="">
-            </div>
-            <div class="project_images_item">
-                <img src="img/project-3-scheme.png" alt="">
-            </div>
-        </div>
-    </div>
-    <div class="download">
-        <img src="img/home-download.png" alt="">
-        <a href="#">СКАЧАТЬ ВЕСЬ КАТАЛОГ ДОМОВ</a>
-    </div>
-    <div class="gallery">
-        <div class="gallery__title">
-            ФОТОГРАФИИ НАШИХ РАБОТ
-        </div>
-        <div class="gallery__text">
-            некоторые фотографии построенных нами домов и бань из бруса
-        </div>
-        <div class="gallery__inner">
-            <a href="img/item-1.png">
-                <img src="img/gallery-item-1.png" alt="">
-                <img src="img/gallery-item-2.png" alt="">
-                <img src="img/gallery-item-3.png" alt="">
-                <img src="img/gallery-item-4.png" alt="">
-                <img src="img/gallery-item-5.png" alt="">
-                <img src="img/gallery-item-6.png" alt="">
-                <img src="img/gallery-item-7.png" alt="">
-                <img src="img/gallery-item-8.png" alt="">
-                <img src="img/gallery-item-9.png" alt="">
-                <img src="img/gallery-item-10.png" alt="">
-                <img src="img/gallery-item-11.png" alt="">
-                <img src="img/gallery-item-12.png" alt="">
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <a class="phone" href="tel:+75852772217">
+                +7 (585) 277-22-17
             </a>
+            <div class="footer__email">
+                namename@gmail.com
+            </div>
         </div>
-        <div class="main__img">
-            <img src="img/main-img.png" alt="">
-        </div>
-    </div>
-</main>
-<footer class="footer">
-    <a class="phone" href="tel:+75852772217">
-        +7 (585) 277-22-17
-    </a>
-    <div class="footer__email">
-        namename@gmail.com
-    </div>
-</footer>
+    </footer>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/main.js"></script>
+</body>
 
 </html>
